# LocalizedStringKit

./: .gitignore  LocalizedStringKit.podspec  Package.swift  README.md  azure-pipelines.yml
.azure/: azure-pipelines.yml  publish.yml
LocalizedStringKit/: README.md
LocalizedStringKit.xcodeproj/: project.pbxproj
LocalizedStringKit.xcodeproj/xcshareddata/xcschemes/: LocalizedStringKit-Package.xcscheme  LocalizedStringKit.xcscheme  LocalizedStringKitTests.xcscheme
LocalizedStringKit/LocalizedStringKit/: LocalizedStringKit.h  LocalizedStringKit.m
LocalizedStringKit/LocalizedStringKit.xcodeproj/: project.pbxproj
LocalizedStringKit/LocalizedStringKit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LocalizedStringKit/LocalizedStringKitTests/: LocalizedStringKitTests.m  LocalizedStringKitTests.swift
Sources/LocalizedStringKit/: LocalizedStringKit.m  LocalizedStringKit.swift
Sources/LocalizedStringKit/include/: LocalizedStringKit.h
Tests/: LinuxMain.swift
Tests/LocalizedStringKitTests/: LocalizedStringKitTests.swift  XCTestManifests.swift
generation/: .coverage  azure-pipelines.yml  coverage.xml  pylintrc  pyproject.toml  requirements.txt  stylecheck.sh  test.sh
generation/htmlcov/: index.html  localizedstringkit___init___py.html  localizedstringkit_command_line_py.html  localizedstringkit_detection_py.html  localizedstringkit_exceptions_py.html  localizedstringkit_files_py.html  localizedstringkit_logger_py.html  status.json
generation/junit/: test-results.xml
generation/localizedstringkit/: __init__.py  command_line.py  detection.py  exceptions.py  files.py  logger.py
generation/tests/: test_basic.py  test_invalid_calls.py
generation/tests/data/objc/: expectation.m  invalid_variable.m  sample.m
generation/tests/data/objc/expectation/: LocalizedStringKit.m  info.m
generation/tests/data/objc/expectation/LocalizedStringKit.bundle/en.lproj/: LocalizedStringKit.strings
generation/tests/data/objc/expectation/info.bundle/en.lproj/: LocalizedStringKit.strings
generation/tests/data/swift/: expectation.m  function_definition.swift  invalid_expression.swift  invalid_variable.swift  mixed_valid_invalid.swift  raw_strings_sample.swift  sample.swift
generation/tests/data/swift/expectation/: LocalizedStringKit.m
generation/tests/data/swift/expectation/LocalizedStringKit.bundle/en.lproj/: LocalizedStringKit.strings  LocalizedStringKit.stringsdict
