[tool.poetry]
name = "localizedstringkit"
version = "0.2.0"
description = "Generate .strings files directly from your code"
authors = ["Dale Myers <dalemy@microsoft.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/microsoft/LocalizedStringKit"
homepage = "https://github.com/microsoft/LocalizedStringKit"

keywords = ['localization', 'strings', 'generation']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development',
    'Topic :: Software Development :: Internationalization',
    'Topic :: Utilities'
]

[tool.poetry.scripts]
localizedstringkit = 'localizedstringkit:command_line.run'

[tool.poetry.dependencies]
python = "^3.7.2"
dotstrings = "^1.1.3"
deserialize = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "=22.10.0"
mypy = "=0.991"
pylint = "=2.15.6"
pytest = "=7.2.0"
pytest-cov = "=4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
