[tool.poetry]
name = "localizedstringkit"
version = "0.2.1"
description = "Generate .strings files directly from your code"
authors = ["Dale Myers <dalemy@microsoft.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/microsoft/LocalizedStringKit"
homepage = "https://github.com/microsoft/LocalizedStringKit"

keywords = ['localization', 'strings', 'generation']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Software Development :: Internationalization',
    'Topic :: Utilities'
]

[tool.poetry.scripts]
localizedstringkit = 'localizedstringkit:command_line.run'

[tool.poetry.dependencies]
python = "^3.8"
dotstrings = "^1.1.3"
deserialize = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[[tool.mypy.overrides]]
module = [
    "dotstrings",
    "dotstrings.genstrings"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
